# ShittyLife

./: CMakeLists.txt  fuckGLFW.sh
shaders/: colored.fsh  colored.vsh
src/: Camera.cpp  Camera.h  ColoredMesh.cpp  ColoredMesh.h  ColoredVertex.h  Globals.cpp  Globals.h  Helpers.h  MeshBuilder.h  MeshData.h  ShaderProgram.cpp  ShaderProgram.h  Sleep.h  main.cpp
